--- a/server/src/web/views/partials/navbar.hbs
+++ b/server/src/web/views/partials/navbar.hbs
@@ -10,8 +10,8 @@ if 2 similar sections are used, the last one will override the first one --}}
 <nav class="navbar navbar-expand-lg navbar-light mb-4">
     <div class="container">
         <a class="navbar-brand" href="#">Scoala 21</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse"
-            aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
+            aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
@@ -22,7 +22,7 @@ if 2 similar sections are used, the last one will override the first one --}}
                     </a>
                 </li> --}}
 
-                <li class="nav-item dropdown">
+                {{!-- <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
                         aria-haspopup="true" aria-expanded="false">
                         Despre
@@ -31,18 +31,15 @@ if 2 similar sections are used, the last one will override the first one --}}
 
                         <a class="dropdown-item {{#if (eq selectedTopMenu '/repere-istorice' )}} active {{/if}}" href="/repere-istorice">Repere
                             istorice</a>
-                        {{!-- <a class="dropdown-item {{#if (eq selectedTopMenu '/revista-scolii' )}} active {{/if}}"
-                            href="#">Vicentiu
-                            Babes</a> --}}
                         <a class="dropdown-item {{#if (eq selectedTopMenu '/elevi-de-prestigiu' )}} active {{/if}}"
                             href="/elevi-de-prestigiu">Elevi de prestigiu</a>
 
                     </div>
-                </li>
+                </li> --}}
 
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-                        aria-haspopup="true" aria-expanded="false">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Inscriere
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -52,7 +49,8 @@ if 2 similar sections are used, the last one will override the first one --}}
                         <a class="dropdown-item {{#if (eq selectedTopMenu '/planul-de-scolarizare' )}} active {{/if}}"
                             href="/planul-de-scolarizare">Planul
                             de scolarizare</a>
-                        <a class="dropdown-item {{#if (eq selectedTopMenu '/circumscriptie' )}} active {{/if}}" href="/circumscriptie">Circumscriptie</a>
+                        <a class="dropdown-item {{#if (eq selectedTopMenu '/circumscriptie' )}} active {{/if}}"
+                            href="/circumscriptie">Circumscriptie</a>
                         <a class="dropdown-item {{#if (eq selectedTopMenu '/criterii-specifice-de-departajare' )}} active {{/if}}"
                             href="criterii-specifice-de-departajare">Criterii
                             specifice de departajare</a>
@@ -62,23 +60,24 @@ if 2 similar sections are used, the last one will override the first one --}}
                         <a class="dropdown-item {{#if (eq selectedTopMenu '/acte-necesare-pentru-inscriere' )}} active {{/if}}"
                             href="/acte-necesare-pentru-inscriere">Acte
                             necesare pentru inscriere</a>
-                        <a class="dropdown-item {{#if (eq selectedTopMenu '/procedura-de-repartizare-pe-clase' )}} active {{/if}}"
+                        {{!-- <a class="dropdown-item {{#if (eq selectedTopMenu '/procedura-de-repartizare-pe-clase' )}} active {{/if}}"
                             href="/procedura-de-repartizare-pe-clase">Procedura
                             de repartizare pe clase</a>
                         <a class="dropdown-item {{#if (eq selectedTopMenu '/scoala-dupa-scoala' )}} active {{/if}}"
                             href="/scoala-dupa-scoala">Scoala
                             dupa scoala</a>
-                        <a class="dropdown-item {{#if (eq selectedTopMenu '/imagini-din-clase' )}} active {{/if}}" href="/imagini-din-clase">Imagini
-                            din clase</a>
+                        <a class="dropdown-item {{#if (eq selectedTopMenu '/imagini-din-clase' )}} active {{/if}}"
+                            href="/imagini-din-clase">Imagini
+                            din clase</a> --}}
 
 
 
                     </div>
                 </li>
 
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-                        aria-haspopup="true" aria-expanded="false">
+                {{!-- <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Evaluare Nationala
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -94,7 +93,7 @@ if 2 similar sections are used, the last one will override the first one --}}
                             href="/rezultate-evaluare-nationala">Rezultate
                             EN</a>
                     </div>
-                </li>
+                </li> --}}
 
                 {{!-- <li class="nav-item">
                     <a class="nav-link {{#if (eq selectedTopMenu '/evaluare-nationala' )}} active {{/if}}" href="/inscriere">EvNat
@@ -102,23 +101,25 @@ if 2 similar sections are used, the last one will override the first one --}}
                 </li> --}}
 
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-                        aria-haspopup="true" aria-expanded="false">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Echipa
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item {{#if (eq selectedTopMenu '/profesori' )}} active {{/if}}" href="/profesori">Profesori
+                        <a class="dropdown-item {{#if (eq selectedTopMenu '/profesori' )}} active {{/if}}"
+                            href="/profesori">Profesori
                         </a>
                         <a class="dropdown-item" href="/personal-auxiliar">Personal auxiliar</a>
                         {{!-- <a class="dropdown-item" href="#">Personal nedidactic</a> --}}
                         <div class="dropdown-divider"></div>
 
-                        <a class="dropdown-item {{#if (eq selectedTopMenu '/conducere' )}} active {{/if}}" href="/conducere">Echipa
+                        <a class="dropdown-item {{#if (eq selectedTopMenu '/conducere' )}} active {{/if}}"
+                            href="/conducere">Echipa
                             manageriala
                         </a>
 
                         {{!-- <a class="dropdown-item" href="#">Consiliul de administratie</a> --}}
-                        <a class="dropdown-item" href="/comisii">Comisii</a>
+                        {{!-- <a class="dropdown-item" href="/comisii">Comisii</a> --}}
                     </div>
                 </li>
 
@@ -131,61 +132,78 @@ if 2 similar sections are used, the last one will override the first one --}}
                     </a>
                 </li> --}}
 
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-                        aria-haspopup="true" aria-expanded="false">
+                {{!-- <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Elevi
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
 
-                        <a class="dropdown-item {{#if (eq selectedTopMenu '/clase' )}} active {{/if}}" href="/clase">Clase</a>
-                        <a class="dropdown-item {{#if (eq selectedTopMenu '/orar-elevi' )}} active {{/if}}" href="/orar-elevi">Orar</a>
-                        <a class="dropdown-item {{#if (eq selectedTopMenu '/transfer-elevi' )}} active {{/if}}" href="/transfer-elevi">Transfer</a>
+                        <a class="dropdown-item {{#if (eq selectedTopMenu '/clase' )}} active {{/if}}"
+                            href="/clase">Clase</a>
+                        <a class="dropdown-item {{#if (eq selectedTopMenu '/orar-elevi' )}} active {{/if}}"
+                            href="/orar-elevi">Orar</a>
+                        <a class="dropdown-item {{#if (eq selectedTopMenu '/transfer-elevi' )}} active {{/if}}"
+                            href="/transfer-elevi">Transfer</a>
                         <a class="dropdown-item {{#if (eq selectedTopMenu '/rezultate-olimpiade' )}} active {{/if}}"
                             href="/rezultate-olimpiade">Rezultate
                             olimpiade</a>
-                        <a class="dropdown-item {{#if (eq selectedTopMenu '/burse-elevi' )}} active {{/if}}" href="/burse-elevi">Burse</a>
+                        <a class="dropdown-item {{#if (eq selectedTopMenu '/burse-elevi' )}} active {{/if}}"
+                            href="/burse-elevi">Burse</a>
                     </div>
+                </li> --}}
+
+                <li class="nav-item">
+                    <a class="nav-link {{#if (eq selectedTopMenu '/clase' )}} active {{/if}}" href="/clase">Clase</a>
                 </li>
 
                 <li class="nav-item dropdown {{#if (eq selectedTopMenu '/matemaraton' )}} active {{/if}}">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-                        aria-haspopup="true" aria-expanded="false">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Proiecte
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
 
-                        <a class="dropdown-item {{#if (eq selectedTopMenu '/revista-scolii' )}} active {{/if}}" href="/revista-scolii">Revista
+                        <a class="dropdown-item {{#if (eq selectedTopMenu '/revista-scolii' )}} active {{/if}}"
+                            href="/revista-scolii">Revista
                             scolii</a>
-                        <a class="dropdown-item {{#if (eq selectedTopMenu '/eco-scoala' )}} active {{/if}}" href="/eco-scoala">Eco
+                        {{!-- <a class="dropdown-item {{#if (eq selectedTopMenu '/eco-scoala' )}} active {{/if}}"
+                            href="/eco-scoala">Eco
                             Scoala</a>
-                        <a class="dropdown-item {{#if (eq selectedTopMenu '/biblioteca' )}} active {{/if}}" href="/biblioteca">Biblioteca</a>
-                        <a class="dropdown-item {{#if (eq selectedTopMenu '/matemaraton' )}} active {{/if}}" href="/matemaraton">MateMaraton</a>
+                        <a class="dropdown-item {{#if (eq selectedTopMenu '/biblioteca' )}} active {{/if}}"
+                            href="/biblioteca">Biblioteca</a> --}}
+                        <a class="dropdown-item {{#if (eq selectedTopMenu '/matemaraton' )}} active {{/if}}"
+                            href="/matemaraton">MateMaraton</a>
 
                     </div>
                 </li>
 
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-                        aria-haspopup="true" aria-expanded="false">
+                {{!-- <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Transparenta
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
 
-                        <a class="dropdown-item {{#if (eq selectedTopMenu '/hotarari-ca' )}} active {{/if}}" href="/hotarari-ca">Hotarari
+                        <a class="dropdown-item {{#if (eq selectedTopMenu '/hotarari-ca' )}} active {{/if}}"
+                            href="/hotarari-ca">Hotarari
                             CA</a>
-                        <a class="dropdown-item {{#if (eq selectedTopMenu '/achizitii-publice' )}} active {{/if}}" href="/achizitii-publice">Achizitii
+                        <a class="dropdown-item {{#if (eq selectedTopMenu '/achizitii-publice' )}} active {{/if}}"
+                            href="/achizitii-publice">Achizitii
                             publice</a>
                         <a class="dropdown-item {{#if (eq selectedTopMenu '/cheltuieli-asociatie-parinti' )}} active {{/if}}"
                             href="/cheltuieli-asociatie-parinti">Cheltuieli
                             asociatie parinti</a>
-                        <a class="dropdown-item {{#if (eq selectedTopMenu '/rapoarte' )}} active {{/if}}" href="/rapoarte">Rapoarte</a>
-                        <a class="dropdown-item {{#if (eq selectedTopMenu '/anunturi' )}} active {{/if}}" href="/anunturi">Anunturi</a>
+                        <a class="dropdown-item {{#if (eq selectedTopMenu '/rapoarte' )}} active {{/if}}"
+                            href="/rapoarte">Rapoarte</a>
+                        <a class="dropdown-item {{#if (eq selectedTopMenu '/anunturi' )}} active {{/if}}"
+                            href="/anunturi">Anunturi</a>
                     </div>
-                </li>
+                </li> --}}
 
                 <li class="nav-item">
-                    <a class="nav-link {{#if (eq selectedTopMenu '/contact' )}} active {{/if}}" href="/contact">Contact</a>
+                    <a class="nav-link {{#if (eq selectedTopMenu '/contact' )}} active {{/if}}"
+                        href="/contact">Contact</a>
                 </li>
             </ul>
         </div>
